--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 <body>
     <h1>Hey</h1>
     <div id="app">
-        <p>{{title}} - {{age}}</p>
-            <button v-on:click="age = age + 1"> Increase Age</button>
+
+        <div v-if="showBooks">
+            {{author}} - Age:{{age}}
+        </div>
+
+        <div  @click="hideBooks">
+            <button v-if="showBooks">Hide books</button>
+            <button v-else>Show books</button>
+        </div>
+        
+
     </div>
     <script src="/app.js"></script>
     
